Sat Nov 17 11:27:28 CET 2007 Christian Anthon <anthon@kiku.dk>

	* eval.c eval.h gnubg.c lib/neuralnet.c lib/neuralnet.h: cleanup
	neuralnet.[ch]

Fri Nov 16 23:24:02 CET 2007 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gtkchequer.h, gtkgame.c, gtkgame.h, gtkpanels.c,
	gtkrelational.c, gtkrelational.h, relational.c, rollout.h: cleanup
	gtkgame.h

Fri Nov 16 22:11:05 CET 2007 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, export.h, gnubg.c, gtkfile.c, gtkfile.h, import.h,
	makeweights.c, multithread.h, play.c, timer.c: cleanup backgammon.h

Fri Nov 16 14:32:04 CET 2007 Christian Anthon <anthon@kiku.dk>

	* : update manuals

Thu Nov  8 01:29:47 CET 2007 Christian Anthon <anthon@kiku.dk>

	* text.c: fix small bug reported by Philippe

Mon Nov  5 21:31:24 CET 2007 Christian Anthon <anthon@kiku.dk>

	* doc/.cvsignore, doc/Makefile.am, doc/gnubg/allabout.pdf,
	doc/gnubg/gnubg.pdf, doc/images/appearence.png,
	doc/images/cubeful-ex1.png: build pdf files

Wed Oct 24 17:17:50 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* external_y.y, file.c, gnubg.c, gnubgmodule.c, gtk-multiview.c,
	gtkboard.c, gtkgame.c, gtksplash.c, htmlimages.c, import.c,
	makebearoff.c, relational.c, renderprefs.c, set.c, sgf.y,
	simpleboard.c, board3d/gtkcolour3d.c, board3d/misc3d.c,
	lib/neuralnet.c: fix a bunch of minor compiler warnings

Tue Oct 23 12:38:57 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gktgame.c, gtkpanels.c: cleanup of InitGTK, move command widget to
	gtkpanels.c

Mon Oct  8 15:46:22 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkcube.c: add rollout presets to cube tool

Wed Oct  3 19:23:28 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* analysis.c, rollout.c: fix to minor mt problems

Wed Oct  3 18:58:41 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* bearoffdump.c eval.c gnubg.c gtkgame.c gtkmovelistctrl.c gtkpanels.c
	latex.c makebearoff.c makehyper.c matchequity.c play.c render.c:
	compiler warnings